Fix layout - color's section is overflowing on small screen

--- a/src/assets/fabricator/styles/partials/_color-chips.scss
+++ b/src/assets/fabricator/styles/partials/_color-chips.scss
@@ -5,7 +5,7 @@
 
 .f-color-chip {
 	flex-grow: 1;
-	flex-shrink: 0;
+	flex-shrink: 1;
 	flex-basis: 100%;
 	border-top-width: 8em;
 	border-top-style: solid;
